style.css
/* ... */
/*⛔⛔ End Header ⛔⛔*/

/* 
🌳🌳 Start Section Try Today  🌳🌳 
*/

.try-today {
  width: 90%;
  margin: 100px auto;
  display: flex;
  justify-content: space-between;
}
.try-today .card-container {
  width: 48%;
  position: relative;
  text-transform: uppercase;
  font-family: "Bebas Neue", cursive;
  color: white;
}
.try-today .card-container > div {
  position: relative;
}
.try-today .card-container:last-child {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.try-today .card-container img {
  width: 100%;
}
.try-today .card-container .label {
  position: absolute;
  top: 20px;
  left: 20px;
}
.try-today .card-container .caption {
  position: absolute;
  top: 45px;
  left: 20px;
  margin-top: 5px;
  font-size: 40px;
  line-height: 35px;
}

/* Responsive Try Today */

@media screen and (max-width: 900px) {
  .try-today {
    flex-direction: column;
  }
  .try-today .card-container {
    width: 100%;
  }
}
@media screen and (max-width: 700px) {
  header {
    height: 725px;
  }
  .try-today .card-container .caption {
    font-size: 30px;
  }
}
/*⛔⛔ End Section Try Today  ⛔⛔*/

/* 
🌳🌳 Start Menu Section 🌳🌳 
*/

.menu .wrapper {
  width: 80%;
  margin: 0 auto;
  text-align: center;
}
.menu .wrapper button {
  background: #ffc236;
  color: #3d2514;
  border: none;
  font-family: "Bebas Neue", cursive;
  font-size: 24px;
  text-transform: uppercase;
  padding: 7px 20px;
  margin-bottom: 30px;
}
.menu .wrapper h2 {
  color: #3d2514;
  font-family: "Alfa Slab One", cursive;
  font-size: 50px;
  text-transform: uppercase;
}
.menu .wrapper p {
  color: #3d2514;
  font-family: "Montserrat", sans-serif;
  font-size: 16px;
  margin-bottom: 50px;
}

.menu .products {
  width: 90%;
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
}
.menu .card img {
  width: 100%;
}
.menu .card {
  display: flex;
  flex-direction: column;
  text-align: center;
  align-items: center;
  width: calc(80% / 3);
}
.menu .card .prod-name {
  font-family: "Bebas Neue", cursive;
  text-transform: uppercase;
  font-size: 30px;
  color: #3d2514;
}
.menu .card .caption {
  font-family: "Montserrat", sans-serif;
  font-size: 16px;
  color: #3d2514;
  margin: 20px 0;
}
.menu .card button {
  background: #df1b1c;
  border: none;
  font-family: "Alfa Slab One", cursive;
  font-size: 18px;
  text-transform: uppercase;
  color: white;
  width: 200px;
  padding: 15px;
}

/* Responsive Menu section */

@media screen and (max-width: 700px) {
  .menu .wrapper h2 {
    font-size: 35px;
  }
  .menu .wrapper p {
    font-size: 14px;
  }
  .menu .products {
    flex-direction: column;
    align-items: center;
  }
  .menu .card {
    width: 80%;
    margin-bottom: 20px;
  }
}

/*⛔⛔ End Menu Section ⛔⛔*/

/* 
🌳🌳 Start Slider  🌳🌳 
*/
.slider {
  margin: 30px 0;
  height: 530px;
}

.slider .swiper-container {
  width: 94%;
  margin: 0 auto !important;
  box-shadow: 19px 11px 30px 6px rgba(50, 50, 50, 0.4);
}
.slider {
  margin: 100px 0;
}
.slider .swiper-slide {
  height: 455px;
}
.slider .content {
  display: flex;
  justify-content: space-between;
  padding: 20px;
  height: 500px;
}
.slider .content .caption {
  width: 50%;
  padding: 10px;
}
.slider .caption h2 {
  color: #3d2514;
  font-family: "Alfa Slab One", cursive;
  font-size: 40px;
  text-transform: uppercase;
  margin-bottom: 20px;
}
.slider .caption p {
  font-family: "Montserrat", sans-serif;
  line-height: 40px;
}
.slider .caption h2 span {
  display: block;
  color: #252424;
  font-family: "Bebas Neue", cursive;
  font-size: 25px;
  text-transform: uppercase;
  letter-spacing: 5px;
}
.slider .content .img {
  width: 50%;
}
.slider .content .img img {
  width: 100%;
}

/* pagination */

.swiper-container-horizontal > .swiper-pagination-bullets,
.swiper-pagination-custom,
.swiper-pagination-fraction {
  bottom: 50px;
  left: -500px;
}

.swiper-pagination-bullet-active {
  opacity: 1;
  background: orange;
}

.swiper-pagination-bullet {
  width: 17px;
  height: 17px;
}

/* Responsive Slider */

@media screen and (max-width: 1180px) {
  .swiper-container-horizontal > .swiper-pagination-bullets,
  .swiper-pagination-custom,
  .swiper-pagination-fraction {
    left: -390px;
  }

  .slider .caption p {
    font-size: 18px;
    line-height: 30px;
  }

  .slider .caption h2 {
    font-size: 30px;
  }
}
@media screen and (max-width: 970px) {
  .swiper-container-horizontal > .swiper-pagination-bullets,
  .swiper-pagination-custom,
  .swiper-pagination-fraction {
    left: auto;
  }
}
@media screen and (max-width: 700px) {
  section.slider {
    margin-bottom: 250px;
  }
  .swiper-container.swiper-container-initialized.swiper-container-horizontal {
    height: auto;
  }
  .swiper-container-horizontal > .swiper-pagination-bullets,
  .swiper-pagination-custom,
  .swiper-pagination-fraction {
    left: auto;
  }
  .slider .swiper-slide {
    height: auto;
    padding-bottom: 50px;
  }
  .slider .content {
    flex-direction: column-reverse;
    height: auto;
  }
  .slider .content .caption {
    width: 100%;
  }
  .slider .caption h2 {
    font-size: 30px;
  }

  .slider .content .img {
    width: 100%;
  }
}
/*⛔⛔ End Slider ⛔⛔*/

/* 
🌳🌳 Start Booking  🌳🌳 
*/
.booking {
  margin-bottom: 135px;
}
.booking p,
.booking h2 {
  text-align: center;
}
.booking p {
  color: #3d2514;
  font-family: "Bebas Neue", cursive;
  font-size: 30px;
  letter-spacing: 2px;
}
.booking h2 {
  color: #3d2514;
  font-family: "Alfa Slab One", cursive;
  text-transform: uppercase;
  font-size: 50px;
  letter-spacing: 5px;
  margin-bottom: 50px;
  position: relative;
}
.booking form {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  width: 750px;
  margin: 0 auto;
  position: relative;
}
.booking form input {
  width: 350px;
  height: 60px;
  margin: 10px;
  padding: 10px 30px;
  border-radius: 5px;
  border: 1px solid rgba(128, 128, 128, 0.74);
}
/* ... */

